// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChopLogicTextInput > should render the input correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-jwIPbr jzZeis test-class"
    style="width: 600px;"
  >
    <label
      class="sc-egkSDF kzQArE"
      for="test-input-id"
    >
      <span>
        Test Input
      </span>
    </label>
    <div>
      <input
        aria-errormessage="test-input-id_error"
        aria-invalid="false"
        aria-readonly="false"
        autocomplete="off"
        id="test-input-id"
        name="test"
        placeholder="Enter text here..."
        type="text"
        value=""
      />
      <span>
        <button
          aria-label="Clear input for Test Input"
          class="sc-gtLWhw hwmlGN"
          type="button"
        >
          <span
            aria-label="SVG Icon Fallback"
            style="font-size: 1rem;"
          >
            ⬜
          </span>
        </button>
      </span>
    </div>
    <span
      aria-hidden="true"
      class="sc-blHHSb eZElIT"
      id="test-input-id_error"
    >
      Invalid input
    </span>
  </div>
</DocumentFragment>
`;

exports[`ChopLogicTextInput > should render the required input correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-jwIPbr jzZeis test-class"
    style="width: 600px;"
  >
    <label
      class="sc-egkSDF kzQArE"
      for="test-input-id"
    >
      <span>
        Test Input
        <abbr
          title="required"
        >
          *
        </abbr>
      </span>
    </label>
    <div>
      <input
        aria-errormessage="test-input-id_error"
        aria-invalid="false"
        aria-readonly="false"
        autocomplete="off"
        id="test-input-id"
        name="test"
        placeholder="Enter text here..."
        required=""
        type="text"
        value=""
      />
      <span>
        <button
          aria-label="Clear input for Test Input"
          class="sc-gtLWhw hwmlGN"
          type="button"
        >
          <span
            aria-label="SVG Icon Fallback"
            style="font-size: 1rem;"
          >
            ⬜
          </span>
        </button>
      </span>
    </div>
    <span
      aria-hidden="true"
      class="sc-blHHSb eZElIT"
      id="test-input-id_error"
    >
      Invalid input
    </span>
  </div>
</DocumentFragment>
`;
